# grcforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-soc2-type2-readiness/: SCENARIO.md  implemented.json
demos/02-fedramp-li-saas-gaps/: SCENARIO.md  implemented.json
demos/03-greenfield-startup/: SCENARIO.md  implemented.json
demos/04-cis-ig1-smb/: SCENARIO.md  implemented.json
demos/05-incident-response-crosswalk/: SCENARIO.md
demos/06-post-merger-consolidation/: SCENARIO.md  implemented.json
demos/07-pci-dss-custom-crosswalk/: SCENARIO.md  crosswalk.json  implemented.json
demos/08-audit-evidence-export/: SCENARIO.md  implemented.json
demos/09-attack-threat-exposure/: SCENARIO.md  implemented.json
examples/: help.txt  implemented.json  list.txt  version.txt
src/grcforge/: __init__.py  cli.py  crosswalk.py  enrich.py
src/grcforge/data/: crosswalk.json
tests/: test_cli.py  test_crosswalk.py  test_demos.py  test_feeds.py
tests/fixtures/: attack-nist-mappings.data  attack-nist-mappings.meta.json  oscal-800-53-rev5-catalog.data  oscal-800-53-rev5-catalog.meta.json
